--- a/package.json
+++ b/package.json
@@ -3,29 +3,34 @@
   "version": "0.1.0",
   "scripts": {
     "lint": "eslint --cache .",
+    "fcm": "ts-node ./src/cli.ts",
     "test": "codemod-cli test",
     "test:coverage": "codemod-cli test --coverage",
     "update-docs": "codemod-cli update-docs",
-    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls"
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
+    "tsc": "tsc"
   },
-  "bin": "./bin/cli.js",
-  "keywords": [
-    "codemod-cli"
-  ],
+  "main": "dist/cli.js",
+  "bin": {
+    "fcm": "dist/cli.js"
+  },
   "dependencies": {
-    "codemod-cli": "^3.2.0"
+    "chalk": "^4.1.2",
+    "execa": "^5.1.1",
+    "glob": "^7.1.7",
+    "jscodeshift": "^0.13.0",
+    "update-notifier": "^5.1.0",
+    "yargs": "^17.0.1"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.4",
+    "@types/jscodeshift": "^0.11.2",
+    "@types/yargs": "^17.0.2",
     "coveralls": "^3.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
     "jest": "^26.6.3",
-    "prettier": "^2.3.2"
-  },
-  "engines": {
-    "node": "10.* || 12.* || >= 14"
+    "prettier": "^2.3.2",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
   },
   "jest": {
     "testEnvironment": "node"
